--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -118,11 +118,18 @@ textarea.form-control.message { min-height: 100px; }
   border: none;
   display: flex;
   align-items: center;
+  padding: 0px 15px;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form { text-align: center; }
 .header .main-navbar li a { color: black; }
 .header .main-navbar ul { margin:  0 auto; }
+.popover-content {
+    padding: 10px 14px!important;
+}
+.popover-content ul li { list-style: none; }
+.pop-down-text-gray   { font-size: 16px; color: #bbbbbb; line-height: 38px;}
+
 
 .submit-holder { text-align: center; width: 700px; }
 .submit-holder input { display: inline-block; }
