--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,6 +10,7 @@ body {
 }
 
 .text-black { color: black; }
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -111,6 +112,7 @@ textarea.form-control.message { min-height: 100px; }
 .container .comment-holder .comment-image { width: 30px; height: 30px; }
 
 .header .main-navbar { 
+  padding: 0px 15px;
   height: 50px; 
   box-shadow: 0 1px 0 0 rgba(0,0,0,0.05),0 2px 4px 0 rgba(0,0,0,0.06);
   background-color: white;
@@ -118,18 +120,11 @@ textarea.form-control.message { min-height: 100px; }
   border: none;
   display: flex;
   align-items: center;
-  padding: 0px 15px;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form { text-align: center; }
-.header .main-navbar li a { color: black; }
+.header .main-navbar li a { color: black; font-size: 12px!important; }
 .header .main-navbar ul { margin:  0 auto; }
-.popover-content {
-    padding: 10px 14px!important;
-}
-.popover-content ul li { list-style: none; }
-.pop-down-text-gray   { font-size: 16px; color: #bbbbbb; line-height: 38px;}
-
 
 .submit-holder { text-align: center; width: 700px; }
 .submit-holder input { display: inline-block; }
@@ -143,7 +138,7 @@ textarea.form-control.message { min-height: 100px; }
 }
 
 .container .create-product { display: flex; align-items:center; }
-.container .create-product .control-label {margin-right: 20px; min-width: 150px; }
+.container .create-product .control-label { margin-right: 20px; min-width: 150px; }
 .container .product-create-form { width: 600px; margin: 0 auto; }
 .container .product-input { width: 300px; }
 
