--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .text-black { color: black; }
-.text-gray { color: #bbbbbb; }
+.text-gray { color: #bbbbbb !important; }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -91,9 +91,9 @@ textarea.form-control.message { min-height: 100px; }
 .container.tech .product .product-image {
   width: 130px; height: 90px; float: left;
 }
-.container.tech .product .product-image img { 
-	width: 130px; 
-	height: 90px; 
+.container.tech .product .product-image img {
+	width: 130px;
+	height: 90px;
 	border-radius: 3px;
 	flex:1;
 }
@@ -139,17 +139,17 @@ textarea.form-control.message { min-height: 100px; }
 .container .comment-holder .main-comment { display: flex; }
 .container  .flex-center { display: flex; align-items:center;}
 .container .comment-holder .comment-image { width: 30px; height: 30px; }
-.container .comment-holder .social-media-holder { 
-	display: flex; 
+.container .comment-holder .social-media-holder {
+	display: flex;
 	justify-content:center;
 	min-width: 300px;
 }
 .container .comment-holder .social-media-holder div {
-	margin: 5px; 
+	margin: 5px;
 }
-.header .main-navbar { 
+.header .main-navbar {
   margin: 0px 15px;
-  height: 50px; 
+  height: 50px;
   box-shadow: 0 1px 0 0 rgba(0,0,0,0.05),0 2px 4px 0 rgba(0,0,0,0.06);
   background-color: white;
   font-weight: 600;
