--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,9 +24,9 @@
        <span class="web">web</span>
       </div>
     </div>
-    <div class="vote-record">
-      <i class="fa fa-comments-o text-gray"></i>
-      <p class="comment-count">{{item.commentcount}}</p>
+    <div class="vote-record" style="width:100%">
+      <i class="fa fa-comments-o text-gray" style="float:right;margin-right:10px"></i>
+      <p class="comment-count" style="float:right">{{item.commentcount}}</p>
     </div>
  </div>
 </div>
