--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="product-image">
-     <img src={{item.image_url[0].thumbnail.url}}/>
+     <img src={{item.image_url[0].thumbnail.url}}>
     </div>
     <div  class="product-details">
       <div>
