--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -7,7 +7,7 @@
     <link href="5/thumbnail-slider.css" rel="stylesheet" type="text/css" />
     <script src="5/thumbnail-slider.js" type="text/javascript"></script>
     <style>
-        body {font: normal 0.9em Arial;color: #222;margin:0;}
+        body {font: normal 1.5em Arial;color: #222;margin:0;}
         header {display: block;font-size: 1.2em;margin-bottom:100px;}
         header a, header span {
             display: inline-block;
@@ -62,8 +62,8 @@
           <a href="https://twitter.com/share" class="twitter-share-button"{count} data-via="gunendu">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
           </script>
+        <button ng-click="facebookshare()" type="button" class="btn btn-primary">Facebook</button>
         </div>
-        <div><button ng-click="facebookshare()" type="button" class="btn btn-primary">Facebook</button></div>
     </div>
 </div>
 <form class="comment-holder">
