--- a/app/views/profiledetails.html
+++ b/app/views/profiledetails.html
@@ -1,4 +1,11 @@
 <div class="container" ng-controller="ProfileCtrl">
+  <div  class="product-details">
+    <div>
+     <p class="username">{{username}}</p>
+     <p class="name">{{name}}</p>
+     <img src={{profile_url}} class="img-circle comment-image">
+    </div>
+  </div>
     <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" style="width:100%;height:180px;border-bottom:solid 1px grey;padding-top:15px;">
       <div style="width:50px;float:left;">
       <div style='    text-align: center;margin-top: 50%;'>
