--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,6 +11,8 @@ body {
 
 .text-black { color: black; }
 .text-gray { color: #bbbbbb !important; }
+.text-white { color: white;}
+.font-20 { font-size: 20px; }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -75,9 +77,7 @@ body {
 .vote::before{content:"\25B2";}​
 .reply { margin-bottom: 20px;}
 /*.red { background-position: 0 2px; }*/
-textarea.form-control { margin: 10px 0px; }
 .btn-info.reply { margin-bottom: 10px; }
-textarea.form-control.message { min-height: 100px; }
 .bold { font-weight: bold;}
 .container.tech { max-width: 960px;}
 .container.tech .product {
@@ -134,19 +134,55 @@ textarea.form-control.message { min-height: 100px; }
 
 .text-center { text-align: center;}
 
-.container .comment-holder { width: 960px; margin: 0 auto; display: flex; }
+/*Commnets*/
+.container .gallery-holder { width: 100%; }
+.container .comment-holder {  margin: 0 auto; display: flex; }
+.container .comment-holder .comments { margin-bottom: 40px; }
 .container .comment-holder .followrow { margin-right: 15px; }
 .container .comment-holder .main-comment { display: flex; }
 .container  .flex-center { display: flex; align-items:center;}
 .container .comment-holder .comment-image { width: 30px; height: 30px; }
+.container .share-holder { padding: 10px; border-left: 1px solid #f0efef; background-color: rgba(229, 228, 228, 0.26); }
 .container .comment-holder .social-media-holder {
 	display: flex;
-	justify-content:center;
 	min-width: 300px;
 }
 .container .comment-holder .social-media-holder div {
 	margin: 5px;
 }
+.container .post-action { border-radius: 0 0 2px 2px; border: 2px solid #cbd2d6; overflow: auto;}
+.container .btn.post { background: rgba(29,47,58,.6); color: white; float: right; border-radius: 0px; }
+.section-heading {
+  color: #bbb;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 17px;
+  margin: 0 0 16px;
+  text-transform: uppercase;
+}
+.media-share {
+  border-radius: 3px;
+  text-align: center;
+  height: 40px;
+  box-sizing: border-box;
+  width: 70px;
+}
+.media-share.twit { background-color: #00a3e1; }
+textarea.form-control.message { 
+  min-height: 100px;
+  margin: 0px; 
+  border-radius: 0 0 2px 2px;
+  border: 2px solid #cbd2d6;
+  border-bottom: 0px;
+}
+textarea.form-control.reply { 
+  margin: 0px; 
+  border-radius: 0 0 2px 2px;
+  border: 2px solid #cbd2d6;
+  border-bottom: 0px;
+}
+
+/*NAV bar*/
 .header .main-navbar {
   margin: 0px 15px;
   height: 50px;
