--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -39,7 +39,9 @@
           <div>
             <div class="bold">{{item.name}}</div>
             <div id={{item.comment.id}}>{{item.comment}}</div>
-            <span class="vote" ng-click="upVoteComment(item.id,item.flag); $event.stopPropagation()"; ng-class="{red : item.flag}">{{item.votecount}}</span>
+            <div class="comment-activities">
+              <span class="vote" ng-click="upVoteComment(item.id,item.flag); $event.stopPropagation()"; ng-class="{red : item.flag}">{{item.votecount}}</span>
+            </div>
           </div>
         </div>
         <div style="margin-left:20px;">
@@ -49,20 +51,25 @@
               <div>
                 <div class="bold">{{reply.reply_name}}</div>
                 <div id={{reply.reply_id}}>{{reply.reply}}</div>
-                <span class="vote" ng-click="upVoteReply(reply.reply_id,item.id,item.flag); $event.stopPropagation()"; ng-class="{red : flag}">{{item.votecount}}</span>
+                <div class="comment-activities">
+                  <span class="vote" ng-click="upVoteReply(reply.reply_id,item.id,item.flag); $event.stopPropagation()"; ng-class="{red : flag}">{{item.votecount}}</span>
+                  <span class="reply-text" onclick="openPostAction(this);">reply</span>
+                </div>
               </div>
             </div>
           </div>
-          <textarea id="maxlength_textarea" class="form-control reply" maxlength="225" rows="1" ng-model="textArea.textBox" placeholder="Reply to comment"></textarea>
-          <div class="post-action">
-            <button class="btn post" ng-click="addReply(textArea.textBox,item.id)">Reply</button>
+          <div  class="post-action-holder hide">
+            <textarea id="maxlength_textarea" class="form-control reply" maxlength="225" rows="1" ng-model="textArea.textBox" placeholder="Reply to comment"></textarea>
+            <div class="post-action">
+              <button class="btn post" ng-click="addReply(textArea.textBox,item.id)">Reply</button>
+            </div>
           </div>
         </div>
         </div>
         <form>
-          <textarea ng-model="message" class="form-control message"></textarea>
+          <textarea ng-model="message" class="form-control message" placeholder="Your Message"></textarea>
           <div class="post-action">
-            <button class="btn post" placeholder="Your Message" ng-click="sendComment(message)">Send Message</button>
+            <button class="btn post"  ng-click="sendComment(message)">Send Message</button>
           </div>
       </form>
     </div>
@@ -92,6 +99,10 @@
             </ul>
     </div>
 </div>
-
+<script type="text/javascript">
+  function openPostAction(el){
+    $(el).parent().parent().closest('.flex-center').parent().siblings('.post-action-holder').removeClass('hide');
+  }
+</script>
 </body>
 </html>
