product details apge

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="vote-record" style="width:100%">
-      <i class="fa fa-comments-o text-gray" style="float:right;margin-right:10px"></i>
+      <i class="fa fa-comments-o text-gray" style="margin-right:10px"></i>
       <p class="comment-count" style="float:right">{{item.commentcount}}</p>
     </div>
  </div>
