--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,15 +4,14 @@
   color: #000;
   padding: 0.2em 0;
 }
-
 body {
   padding: 0;
 }
-
 .text-black { color: black; }
 .text-gray { color: #bbbbbb !important; }
 .text-white { color: white;}
 .font-20 { font-size: 20px; }
+.text-center { text-align: center;}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -89,7 +88,7 @@ body {
 }
 .container.tech .product:hover { background-color: #F7F7FA; }
 .container.tech .product .product-image {
-  width: 130px; height: 90px; float: left;
+  width: 130px; height: 90px; 
 }
 .container.tech .product .product-image img {
 	width: 130px;
@@ -131,8 +130,14 @@ body {
     margin-top: 5px;
 }
 .container .upvote-count { padding: 0px 10px; }
-
-.text-center { text-align: center;}
+.container .vote-record { 
+  width: 100%; 
+  display: flex; 
+  align-items: baseline;
+  justify-content: flex-end;
+  flex: 1;
+  color: #bbbbbb;
+}
 
 /*Commnets*/
 .container .gallery-holder { width: 100%; }
@@ -146,9 +151,6 @@ body {
 .container .comment-holder .social-media-holder {
 	display: flex;
 	min-width: 300px;
-}
-.container .comment-holder .social-media-holder div {
-	margin: 5px;
 }
 .container .post-action { border-radius: 0 0 2px 2px; border: 2px solid #cbd2d6; overflow: auto;}
 .container .btn.post { background: rgba(29,47,58,.6); color: white; float: right; border-radius: 0px; }
@@ -184,6 +186,7 @@ textarea.form-control.reply {
 .container .comment-holder .reply-text { vertical-align: top; }
 .container .comment-activities { color: rgba(0,39,59,.35); }
 .container .comment-activities span { padding: 0px 10px; }
+
 /*NAV bar*/
 .header .main-navbar {
   margin: 0px 15px;
