--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<div class="comment-holder">
+<div class="comment-holder" ng-controller="PostDetailsCtrl">
     <div>
         <div class="content"><ng-gallery images="images" thumbs-num="5"></ng-gallery></div>
         <div ng-repeat="item in comments.comments" class="comments">
@@ -52,8 +52,8 @@
               </div>
             </div>
           </div>
-          <textarea id="maxlength_textarea" class="form-control" maxlength="225" rows="1" ng-model="textArea.textBox" placeholder="Reply to comment"></textarea>
-          <button class="btn btn-info reply" ng-click="addReply(textArea.textBox,item.id)">Reply</button>
+          <textarea id="maxlength_textarea" class="form-control" maxlength="225" rows="1" ng-model="$parent.textmodel" ng-change="change()" placeholder="Reply to comment"></textarea>
+          <button class="btn btn-info reply" ng-click="addReply(textmodel,item.id)">Reply</button>
         </div>
         </div>
     </div>
@@ -65,6 +65,7 @@
         <button ng-click="facebookshare()" type="button" class="btn btn-primary">Facebook</button>
         </div>
     </div>
+    <div>{{log}}</div>
 </div>
 <form class="comment-holder">
   <textarea ng-model="message" class="form-control message"></textarea>
@@ -74,10 +75,10 @@
 <div style="padding:220px 0 100px;">
     <div id="thumbnail-slider">
             <ul>
-                <li ng-repeat="user in users">
+              <!--  <li ng-repeat="user in users">
                   <img class="thumb" style='width:50px;height:50px' src={{user}} ng-mouseover="hoverIn(user,$event)">
                   </img>
-                </li>
+                </li> -->
             </ul>
     </div>
 </div>
