--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -42,6 +42,7 @@
             <div id={{item.comment.id}}>{{item.comment}}</div>
             <div class="comment-activities">
               <span class="vote" ng-click="upVoteComment(item.id,item.flag); $event.stopPropagation()"; ng-class="{red : item.flag}">{{item.votecount}}</span>
+              <span class="reply-text" onclick="openPostAction(this);">reply</span>
             </div>
           </div>
         </div>
@@ -54,7 +55,6 @@
                 <div id={{reply.reply_id}}>{{reply.reply}}</div>
                 <div class="comment-activities">
                   <span class="vote" ng-click="upVoteReply(reply.reply_id,item.id,item.flag); $event.stopPropagation()"; ng-class="{red : flag}">{{item.votecount}}</span>
-                  <span class="reply-text" onclick="openPostAction(this);">reply</span>
                 </div>
               </div>
             </div>
@@ -104,7 +104,7 @@
 </div>
 <script type="text/javascript">
   function openPostAction(el){
-    $(el).parent().parent().closest('.flex-center').parent().siblings('.post-action-holder').removeClass('hide');
+    $(el).parent().parent().parent('.main-comment').siblings().find('.post-action-holder').removeClass('hide');
   }
 </script>
 </body>
