--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -189,7 +189,7 @@ textarea.form-control.reply {
 
 /*NAV bar*/
 .header .main-navbar {
-  margin: 0px 15px;
+  padding: 0px 15px;
   height: 50px;
   box-shadow: 0 1px 0 0 rgba(0,0,0,0.05),0 2px 4px 0 rgba(0,0,0,0.06);
   background-color: white;
@@ -198,11 +198,14 @@ textarea.form-control.reply {
   display: flex;
   align-items: center;
 }
-
 .navbar-default .navbar-collapse, .navbar-default .navbar-form { text-align: center; }
 .header .main-navbar li a { color: black; font-size: 12px!important; }
 .header .main-navbar ul { margin:  0 auto; }
+.header .header-right { margin-right: 30px; }
+.header .header-right i { padding: 0 5px; }
+.current-login { position: absolute; right: 10px; top: 10px; }
 
+/*Sumit Page*/
 .submit-holder { text-align: center; width: 700px; }
 .submit-holder input { display: inline-block; }
 .submit-holder .submit { margin-top: 15px;}
