--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,26 +1,10 @@
 <div class="container tech" ng-controller="MainCtrl">
-  <div style="position:relative;">
+  <div class="current-login">
   <img src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/p50x50/1507900_10151842209257595_366437610_n.jpg?oh=4a34ccbd3b0ef7fd65c068d2f54a05b8&oe=56C5839E&__gda__=1455539288_5b6f604f64bee664f0170321ea989291' style="width:30px;height:30px;" class="img-circle" data-toggle="popover" class='pop-down' data-placement="bottom" title="" data-content="
       <div><a class='text-gray' href='#logout' style='font-size:14px;color: #bbbbbb;'>logout</a></div>
       <div><a class='text-gray' style='font-size:14px;color: #bbbbbb;' href='#profile'>My Profile</a></div>
       "/>
   </div>
-  <script type="text/javascript">
-  $(document).ready(function(){
-      $('[data-toggle="popover"]').popover({
-        placement : 'bottom',
-        html:true,
-      });
-   });
-</script>
-  <!--<div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" src={{trustSrc}}>login
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a href="#logout">logout</a></li>
-        <li><a href="#profile">My Profile</a></li>
-      </ul>
-  </div>-->
   <div ng-repeat="item in result" ng-click="go('/postdetails/',item.id)" class="product">
     <div class="upvote-count">
       <div class ="text-center">
@@ -44,3 +28,11 @@
     </div>
  </div>
 </div>
+<script type="text/javascript">
+  $(document).ready(function(){
+      $('[data-toggle="popover"]').popover({
+        placement : 'bottom',
+        html:true,
+      });
+   });
+</script>
