post details changes

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,23 @@
+  <div id="horntell_center"></div>
+  <script type="text/javascript">
+  var __ht = __ht || {};
+  __ht.app          = '566d7f3d856a86fe258b4568';
+   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  __ht.profile = {
+      uid: 'gunendu@gmail.com',
+      uid_hash: 'f00338358c5a34be41a495d0c93260c8afffdc2efebba772579dc7da9ed92aa3',
+      first_name: 'gunendu',
+      custom_attributes: {
+          is_paying: true
+      }
+  };
+  (function() {
+      var ht = document.createElement('script'); ht.type = 'text/javascript'; ht.async = true;
+      ht.src = '//center.horntell.com/center.min.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ht);
+  })();
+</script>
+
 <div class="container tech" ng-controller="MainCtrl">
   <div class="current-login">
   <img src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/p50x50/1507900_10151842209257595_366437610_n.jpg?oh=4a34ccbd3b0ef7fd65c068d2f54a05b8&oe=56C5839E&__gda__=1455539288_5b6f604f64bee664f0170321ea989291' style="width:30px;height:30px;" class="img-circle" data-toggle="popover" class='pop-down' data-placement="bottom" title="" data-content="
