--- a/app/views/postdetails.html
+++ b/app/views/postdetails.html
@@ -7,6 +7,7 @@
     <link href="5/thumbnail-slider.css" rel="stylesheet" type="text/css" />
     <script src="5/thumbnail-slider.js" type="text/javascript"></script>
     <script src="bower_components/ment.io/dist/mentio.js"></script>
+    <script src="http://platform.twitter.com/widgets.js"></script>
     <style>
         body {font: normal 1.5em Arial;color: #222;margin:0;}
         header {display: block;font-size: 1.2em;margin-bottom:100px;}
@@ -26,7 +27,7 @@
     </style>
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<div>
+<div ng-controller="PostDetailsCtrl">
 
   <div class="content gallery-holder"><ng-gallery images="images" thumbs-num="5"></ng-gallery></div>
   <div class="comment-holder">
@@ -69,7 +70,6 @@
         </div>
         </div>
         <form>
-
         <textarea mentio
               mentio-typed-text="typedTerm"
               mentio-items="people | filter:label:typedTerm"
@@ -91,14 +91,8 @@
     <div class="share-holder">
         <h3 class="section-heading">Share</h3>
         <div class="social-media-holder">
-          <div id="test">
-            <a href="https://twitter.com/share" class="media-share twitter-share-button"{count} data-via="gunendu">Tweet</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-            </script>
-            <button  type="button" class="btn btn-primary media-share twit"><i class="fa fa-twitter white font-20"></i>
-            </button>
+          <a twitter  data-lang="en" data-count='horizontal' data-url='http://twitter.com' data-via='notsosleepy' data-size="medium" data-text='Testing Twitter Share' ></a>
           <button ng-click="facebookshare()" type="button" class="btn btn-primary media-share facebook"><i class="fa fa-facebook white font-20"></i></button>
-        </div>
         </div>
     </div>
   </div>
@@ -108,6 +102,7 @@
     <div id="thumbnail-slider">
       <ul>
           <li ng-repeat="user in users">
+            {{user}}
             <img class="thumb" style='width:50px;height:50px' src={{user}} ng-mouseover="hoverIn(user,$event)">
             </img>
           </li>
